Refactor playlist data with relative paths

--- a/index.html
+++ b/index.html
@@ -1589,8 +1589,7 @@
                     <div class="floating-shape shape-2"></div>
                     <div class="floating-shape shape-3"></div>
                     <div class="profile-container">
-                        <i class="fas fa-user profile-icon"></i>
-                    </div>
+                        <img src="assets/17.jpg">  </div>
                 </div>
             </div>
         </div>
@@ -1608,7 +1607,7 @@
                         <i class="fas fa-user card-icon"></i>
                         <h3>Personal</h3>
                         <p>Get to know me beyond the code</p>
-                        <span class="card-hint">Click to flip</span>
+                        <span class="card-hint">Click to View</span>
                     </div>
                     <div class="card-back">
                         <h3>Austin</h3>
@@ -1630,7 +1629,7 @@
                         <i class="fas fa-road card-icon"></i>
                         <h3>Journey</h3>
                         <p>My path to becoming a developer</p>
-                        <span class="card-hint">Click to flip</span>
+                        <span class="card-hint">Click to View</span>
                     </div>
                     <div class="card-back">
                         <h3>My Journey</h3>
@@ -1662,7 +1661,7 @@
                         <i class="fas fa-heart card-icon"></i>
                         <h3>Passions</h3>
                         <p>What drives me beyond coding</p>
-                        <span class="card-hint">Click to flip</span>
+                        <span class="card-hint">Click to View</span>
                     </div>
                     <div class="card-back">
                         <h3>My Passions</h3>
