--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Austin - Portfolio | CodeAlpha</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
     <style>
         /* ===== CSS RESET & GLOBAL VARIABLES ===== */
         * {
@@ -1698,7 +1699,7 @@
                         <i class="fas fa-eye card-icon"></i>
                         <h3>Vision</h3>
                         <p>Where I'm headed in the future</p>
-                        <span class="card-hint">Click to flip</span>
+                        <span class="card-hint">Click to View</span>
                     </div>
                     <div class="card-back">
                         <h3>My Vision</h3>
@@ -1743,7 +1744,7 @@
                                 <a href="https://jahpne.github.io/E-commerce_website/" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
-                                <a href="#" class="project-link">
+                                <a href="https://github.com/Jahpne/E-commerce_website/" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
@@ -1771,7 +1772,7 @@
                         <div class="project-img" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link">
+                                <a href="https://github.com/Jahpne/TodoList" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                                 <a href="https://jahpne.github.io/TodoList/" class="project-link">
@@ -1805,7 +1806,7 @@
                                 <a href="https://jahpne.github.io/Fitness_App/" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
-                                <a href="#" class="project-link">
+                                <a href="https://github.com/Jahpne/Fitness_App" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
@@ -2061,28 +2062,32 @@
                     <div class="footer-contact-info">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>austin@example.com</span>
+                            <span>augusdavik@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+234 913 807-2232</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-whatsapp"></i>
+                            <span>+234 815 789-6621</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>San Francisco, CA</span>
+                            <span>Nigeria, NG</span>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link">
+                        <a href="https://github.com/Jahpne/" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://www.linkedin.com/in/augustin-david-755bb92a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-twitter"></i>
+                        <a href="https://x.com/AugustinDa55606" class="social-link">
+                            <i class="fa-brands fa-x-twitter"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://www.instagram.com/mikejobs692?igsh=YzljYTk1ODg3Zg==" class="social-link">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
