--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
                     <div class="floating-shape shape-2"></div>
                     <div class="floating-shape shape-3"></div>
                     <div class="profile-container">
-                        <i class="fas fa-user profile-icon"></i>
+                       <img src="assets/17.jpg" alt="<i class="fas fa-user profile-icon"></i>">
                     </div>
                 </div>
             </div>
