Update GitHub links for project repositories

--- a/index.html
+++ b/index.html
@@ -1914,7 +1914,7 @@
                                 <a href="https://jahpne.github.io/E-commerce_website/" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
-                                <a href="https://github.com/Jahpne/E-commerce_website/" class="project-link">
+                                <a href="https://github.com/Jahpne/E-commerce_website" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
@@ -1945,7 +1945,7 @@
                                 <a href="https://github.com/Jahpne/TodoList" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
-                                <a href="https://jahpne.github.io/TodoList/" class="project-link">
+                                <a href="https://github.com/Jahpne/TodoList" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
@@ -1976,7 +1976,7 @@
                                 <a href="https://jahpne.github.io/Fitness_App/" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
-                                <a href="https://github.com/Jahpne/Fitness_App" class="project-link">
+                                <a href="https://github.com/Jahpne/FitnessApp" class="project-link">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
